--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-    <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <!-- 声明使用摄像头特性，但不强制要求 -->
     <uses-feature android:name="android.hardware.camera" android:required="false" />
-      <uses-permission android:name="android.permission.INTERNET" />
+
+    <!--  Used for network features  -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <!--  To check the network connection state of the device, you'll need to add the ACCESS_NETWORK_STATE permission.  -->
+    <!--  This permission does not require user consent at runtime, but needs to be declared in the app's AndroidManifest.xml.  -->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+    <!--  If the app needs to record audio, you need to declare the RECORD_AUDIO permission and request this permission at runtime  -->
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
+
+    <!--  The application needs to access the device's camera  -->
+    <uses-permission android:name="android.permission.CAMERA" />
+
+
+    <!-- Needed only if your app communicates with already-paired Bluetooth devices. -->
+    <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
+
+
+
+    <!-- Only used by Demo for screen recording and streaming  -->
+    <!-- Used for creating background tasks, not required by SDK -->
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <!-- Requesting permission to create system overlay windows -->
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+
+    <!-- Only used by Demo for muting  -->
+    <!-- If this permission is not declared, the feature of automatically muting the stream during a phone call will not work -->
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <application
         android:networkSecurityConfig="@xml/network_security_config"
@@ -19,10 +45,23 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CloudChat_volunteer"
         tools:targetApi="31">
+
+        <meta-data
+            android:name="com.aliyun.alivc_license.licensekey"
+            android:value="QPxPIaWVhFJ33BuBx046a57a49ccb4b1e98030baa3a2b23d0"/>
+        <meta-data
+            android:name="com.aliyun.alivc_license.licensefile"
+            android:value="AliVideoCert-com_app_cloudchat_volunteer-20250311214342.crt"/>
+        <meta-data
+            android:name="com.aliyun.alivc_license.licensekey_SEA"
+            android:value="QPxPIaWVhFJ33BuBx046a57a49ccb4b1e98030baa3a2b23d0"/>
+        <meta-data
+            android:name="com.aliyun.alivc_license.licensefile_SEA"
+            android:value="AliVideoCert-com_app_cloudchat_volunteer-20250311214345.crt"/>
+
         <activity
             android:name=".MainActivity"
-            android:exported="true"
-            android:label="@string/app_name">
+            android:exported="true">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -31,6 +70,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.live.LiveActivity" />
+        <activity android:name=".ui.live.InteractiveActivity" />
 
     </application>
   
